--- a/front-end/chat.html
+++ b/front-end/chat.html
@@ -594,8 +594,8 @@
 <body>
     
     <!-- ========== Navigation Bar ========== -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid px-4">
+    <nav class="navbar navbar-expand-lg sticky-top">
+        <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="fas fa-graduation-cap"></i> CollabLearn
             </a>
@@ -605,7 +605,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="dashboard.html">
+                        <a class="nav-link active" href="dashboard.html">
                             <i class="fas fa-home me-1"></i>Dashboard
                         </a>
                     </li>
@@ -626,7 +626,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="chat.html">
+                        <a class="nav-link" href="chat.html">
                             <i class="fas fa-comments me-1"></i>Chat
                         </a>
                     </li>
